plugins {
    id 'java'
    id 'org.graalvm.buildtools.native' version '0.10.3'
}

group = 'com.rinha'
version = '1.0.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = '25'
    targetCompatibility = '25'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs += ['--add-modules', 'jdk.incubator.vector']
}

tasks.register('generateIndex', JavaExec) {
    mainClass = 'indexer.IndexGenerator'
    classpath = sourceSets.main.runtimeClasspath
    args = ['resources/references.json.gz', 'index.bin', '10000', '5']
}

graalvmNative {
    binaries {
        main {
            mainClass = 'Server'
            buildArgs.add('--initialize-at-build-time')
            buildArgs.add('--initialize-at-run-time=api.FraudHandler')
            buildArgs.add('--no-fallback')
            buildArgs.add('-march=native')
            buildArgs.add('--add-modules=jdk.incubator.vector')
        }
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
}
